# fastfind

./: Cargo.toml  README.md  build.rs
assets/: demo.avif
benches/: benchmark.rs
src/: index.rs  lib.rs  main.rs  ntfs.rs  style.rs
src/index/: find.rs  iter_find.rs
src/ntfs/: usn_journal_data.rs  usn_record.rs  volume.rs
