[package]
name = "ffd"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.22", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
memchr = "2.7.4"
nu-ansi-term = "0.50.1"
windows = { version = "0.58.0", features = ["Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Ioctl", "Win32_System_WindowsProgramming"] }

[profile.release]
strip = "symbols"
lto = "thin"